--- a/Penguinicebreaker/app/build.gradle
+++ b/Penguinicebreaker/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.6.0'
     compile 'com.google.firebase:firebase-auth:11.6.0'
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 
 
 }
